--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,31 @@ body {
 
 }	
 
+.SplashScreen{
+	background-color: #DC143C;
+	font-family:"Trebuchet MS", Helvetica, sans-serif;
+	color:white;
+	font-size: 50px; 
+	width: 500px;
+	display: table;
+	margin-right:auto;
+	margin-left:auto;
+
+}
+
+
+#show-number{
+	background-color: #DC143C;
+	font-family:"Trebuchet MS", Helvetica, sans-serif;
+	color:white;
+	font-size: 50px; 
+	width: 500px;
+	display: table;
+	margin-right:auto;
+	margin-left:auto;
+}
+
+
 .header{
 	background-color: #DC143C;
 	font-family:"Trebuchet MS", Helvetica, sans-serif;
@@ -38,3 +63,15 @@ body {
 	margin-right:auto;
 	margin-left:auto;
 }
+
+.qtext{
+	background-color: #DC143C;
+	font-family:"Trebuchet MS", Helvetica, sans-serif;
+	color:white;
+	width: 500px;
+	display: table;
+	margin-right:auto;
+	margin-left:auto;
+}
+
+
