--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ body {
 #answerDiv{
 	background-color: #DC143C;
 	font-family:"Trebuchet MS", Helvetica, sans-serif;
+	font-size:50px;
 	color:white;
 	width: 500px;
 	display: table;
